# ImpulseR

./: .gitignore  AGENTS.md  README.md  build-with-java.bat  build.gradle  gradlew  gradlew.bat  settings.gradle
.github/prompts/: plan-androidIrCapture.prompt.md
.github/workflows/: release.yml
app/: build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/engine/: CalibrationFilter.cpp  CalibrationFilter.h  Deconvolver.cpp  Deconvolver.h  ESSGenerator.cpp  ESSGenerator.h  IRProcessor.cpp  IRProcessor.h  OboeEngine.cpp  OboeEngine.h  RingBuffer.h  WavExporter.cpp  WavExporter.h
app/src/main/cpp/jni/: JniBridge.cpp
app/src/main/cpp/renderer/: SpectrogramRenderer.cpp  SpectrogramRenderer.h  WaveformRenderer.cpp  WaveformRenderer.h
app/src/main/kotlin/: AudioCaptureForegroundService.kt  MainActivity.kt
app/src/main/kotlin/engine/: NativeEngine.kt
app/src/main/res/drawable/: ic_launcher_foreground.xml
app/src/main/res/values/: strings.xml  themes.xml
